StreamSense-be/app/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamsense-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamsense-be
  template:
    metadata:
      labels:
        app: streamsense-be
    spec:
      containers:
      - name: streamsense-be
        image: rishikesh54/streamsense-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: streamsense-be-service
spec:
  selector:
    app: streamsense-be
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
